mobile screens overflow issues

--- a/css/index.css
+++ b/css/index.css
@@ -201,11 +201,11 @@ a {
 
 .header {
   display: grid;
-  grid-template-columns: repeat(4, 1fr) 2rem 4rem;
-  grid-template-rows: 4rem 4rem;
-  padding: 1.25rem 0 0.25rem;
+  grid-template-columns: 1fr 1.5rem 4rem;
+  grid-template-rows: 3.5rem 3.5rem;
+  padding: 1.25rem 1rem 0.25rem 0.5rem;
   gap: 1rem;
-  grid-template-areas: "logo logo logo logo phone menu" "search search search search search search";
+  grid-template-areas: "logo phone menu" "search search search ";
 }
 @media (min-width: 768px) {
   .header {
@@ -224,12 +224,22 @@ a {
 
 .logo {
   grid-area: logo;
-  width: 20rem;
   height: auto;
 }
 .logo img {
-  max-width: 20rem;
+  padding-top: 1.5rem;
+  max-width: 8rem;
   height: auto;
+}
+@media (min-width: 350px) {
+  .logo img {
+    max-width: 15rem;
+  }
+}
+@media (min-width: 480px) {
+  .logo img {
+    max-width: 20rem;
+  }
 }
 @media (min-width: 992px) {
   .logo img {
@@ -397,8 +407,27 @@ nav {
   background-repeat: no-repaet;
   padding: 8rem 2rem;
 }
+.carousel h1, .carousel h3 {
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 0.025rem;
+}
+@media (min-width: 992px) {
+  .carousel h1, .carousel h3 {
+    text-align: left;
+  }
+}
+.carousel h1 {
+  font-size: 2.5rem;
+}
+@media (min-width: 992px) {
+  .carousel h1 {
+    font-size: 4rem;
+  }
+}
 .carousel h3 {
   margin-top: 2rem;
+  font-size: 1.25rem;
 }
 @media (min-width: 480px) {
   .carousel {
@@ -495,15 +524,13 @@ nav {
   margin-top: 2rem;
 }
 
-.service-cards {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 2.5rem;
-}
-.service-cards .service-card {
-  grid-column: span 12;
-}
 @media (min-width: 992px) {
+  .service-cards {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    gap: 2.5rem;
+    background-color: purple;
+  }
   .service-cards .service-card:nth-child(-n+3) {
     grid-column: span 4;
   }
@@ -526,6 +553,9 @@ nav {
   align-items: center;
   padding: 1.5rem;
   border-radius: 1rem;
+  max-width: 20rem;
+  margin: 1rem;
+  background-color: pink;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .service-card h4 {
