--- a/scss/layout/_carousel.scss
+++ b/scss/layout/_carousel.scss
@@ -9,8 +9,27 @@
 //    text-align: center;    
     padding: 8rem 2rem;
 
+    h1, h3 {
+        text-align: center;
+        font-weight: 700;    
+        letter-spacing: 0.025rem;
+
+        @include lg {
+            text-align:left;
+        }
+    }
+
+    h1 {
+        font-size: 2.5rem;
+        
+        @include lg {
+            font-size: 4rem;
+        }
+    }
+
     h3 {
         margin-top: 2rem;
+        font-size: 1.25rem;
     }
 
     @include sm {
