--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,14 +1,27 @@
 .header {
     display: grid;
-    grid-template-columns: repeat(4, 1fr) 2rem 4rem;
-    grid-template-rows: 4rem 4rem;
-    padding: 1.25rem 0 0.25rem;
+    grid-template-columns: 1fr 1.5rem 4rem;
+    grid-template-rows: 3.5rem 3.5rem;
+    padding: 1.25rem 1rem 0.25rem 0.5rem;
+  //  min-width: 100vw;
     gap: 1rem;
  
   
     grid-template-areas:
-       "logo logo logo logo phone menu"
-       "search search search search search search";
+       "logo phone menu"
+       "search search search ";
+
+    
+
+
+    // @include sm {
+    //     grid-template-columns: repeat(4, 1fr) 2rem 4rem;
+    //     grid-template-rows: 4rem 4rem;
+    //     grid-template-areas:
+    //     "logo logo logo logo phone menu"
+    //     "search search search search search search";
+
+    // }
 
     @include md {  
         grid-template-columns: 3fr 2fr 6rem;
@@ -28,13 +41,22 @@
 
 .logo {
     grid-area: logo;
-    width: 20rem;
     height: auto;
+ 
  
 
     img {
-        max-width: 20rem;
+        padding-top: 1.5rem;
+        max-width: 8rem;
         height: auto;
+
+        @include xs {
+            max-width: 15rem;
+        }
+
+        @include sm {
+            max-width: 20rem;
+        }
 
         @include lg {
             max-width: 24rem;
